--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,23 @@
     --grisfonce : #4D4D4D;
     --grispale: #C8C8C8;
 }
+
+/*--------------------------------------------------------- 
+# SECTION : Styles généraux
+---------------------------------------------------------*/ 
+
+
+/*---------------------------------------------------------- 
+# SECTION : En-tête (nav, log etc)
+----------------------------------------------------------*/ 
+
+/*---------------------------------------------------------- 
+# SECTION : Héros
+----------------------------------------------------------*/ 
+
+/*---------------------------------------------------------------- 
+# ADAPTATION PAR MEDIA QUERIES (Responsiveness) pour grands écrans
+
+Car ce qui précède les media queries est stylisé pour mobile
+en premier (mobile first).
+----------------------------------------------------------------*/ 
